# Veyon

./: Building Veyon Chat Plugin DLL on Windows.md  Building Veyon Chat Plugin with GitHub Actions.md  CMakeLists-github.txt  CMakeLists.txt  ChatFeaturePlugin.cpp  ChatFeaturePlugin.h  ChatMasterWidget.h  ChatMessage.h  ChatServiceClient.cpp  ChatSession.cpp  ChatSession.h  README.md  Veyon Chat Add-on_ Design and Architecture.md  Veyon Chat Plugin - Windows Installation Guide.md  build-windows.bat  install-windows.bat  pasted_content.txt  veyon_research.md
.github/workflows/: build-windows-corrected.yml  build-windows-final.yml  build-windows-fixed.yml  build-windows-qt-fixed.yml  build-windows.yml
resources/: chat.qrc
src/: ChatClientWidget.cpp  ChatClientWidget.h  ChatFeaturePlugin.cpp  ChatFeaturePlugin.h  ChatMasterWidget.cpp  ChatMasterWidget.h  ChatMessage.cpp  ChatRequestWorker.cpp  ChatRequestWorker.h  ChatServiceClient.cpp  ChatServiceClient.h  ChatSession.cpp  ChatSession.h  ChatSignalListener.cpp  ChatSignalListener.h  ComputerControlInterface.h  FeatureMessage.h  VeyonCompat.h  VeyonServerInterface.h  VeyonWorkerInterface.h
ui/: ChatClientWidget.ui  ChatMasterWidget.ui
